--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,31 @@
-baseURL = 'http://example.org/'
 languageCode = 'pt-br'
-title = 'Descarga Mental'
 theme = 'ananke'
+baseURL = "https://zucchivan.github.io/descarga-mental/"
+resourceDir = "../resources"
+defaultContentLanguage = "pt"
+SectionPagesMenu = "main"
+googleAnalytics = ""
+enableRobotsTXT = true
+
+[languages]
+  [languages.pt]
+    title = "Descarga Mental"
+    weight = 1
+    contentDir = "content/pt"
+    #languageDirection = 'rtl' for Right-To-Left languages
+
+  [languages.en]
+    title = "Descarga Mental"
+    weight = 1
+    contentDir = "content/pt"
+    #languageDirection = 'rtl' for Right-To-Left languages
+ 
+[params]
+  text_color = ""
+  author = ""
+  favicon = ""
+  site_logo = ""
+  # choose a background color from any on this page: https://tachyons.io/docs/themes/skins/ and preface it with "bg-"
+  background_color_class = "bg-black"
+  recent_posts_number = 3
+  commentoEnable = false
